# SkillsPlusPlus

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.github/scripts/: generate-release-body.sh
.github/scripts/registry/: __init__.py  __main__.py  _common.py  classify.py  enrich_github.py  fetch_clawhub.py  fetch_github_topic.py  fetch_lobehub.py  fetch_skillhub.py  fetch_skills_sh.py  fetch_skillsmp.py  merge_and_push.py  requirements.txt  schema.py
.github/workflows/: registry-sync.yml  release.yml
.mimocode/plans/: 1781327656910-neon-orchid.md
apps/desktop/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/e2e/: tools.spec.ts  (+4 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: app.rs  directory.rs  install.rs  mod.rs  settings.rs  source.rs  sync.rs
apps/desktop/src-tauri/src/models/: mod.rs
apps/desktop/src-tauri/src/repositories/: db.rs  settings.rs
apps/desktop/src-tauri/src/services/: canonical_store.rs  directory.rs  http_bridge.rs  install.rs  lockfile.rs  mirror.rs  mod.rs  net_resilient.rs  skill_md.rs  source.rs  source_registry.rs  symlink.rs  sync.rs  webdav_client.rs
apps/desktop/src-tauri/src/services/adapters/: github.rs  lobehub.rs  mod.rs  registry.rs  skills_sh_search.rs  stub.rs
docs/: PRD.md  design-system.md  roadmap.md  开发计划.md
docs/developinglog/: 2026-06-13-安装策略与HTTP桥接合并.md  安装策略.md
docs/devlog/: 2026-06-14-skills-cli调试与Victauri桥接修复.md
(+46 files in other folders)
