[package]
name = "desktop"
version = "0.3.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
# Debug-only MCP introspection server for AI-agent-driven testing.
# No-op with zero overhead in release builds (guarded internally by #[cfg(debug_assertions)]).
victauri-plugin = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sha1 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tempfile = "3"

